styles.css
@font-face {
    font-family: 'OPTIFuturaDemiBold';
    src:url('./fonts/futura/OPTIFuturaDemiBold.ttf.woff') format('woff'),
        url('./fonts/futura/OPTIFuturaDemiBold.ttf.svg##OPTIFuturaDemiBold') format('svg'),
        url('./fonts/futura/OPTIFuturaDemiBold.ttf.eot'),
        url('./fonts/futura/OPTIFuturaDemiBold.ttf.eot?iefix') format('embedded-opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'EPSON';
    src: url('./fonts/Epson/EPSON-KAISHO.woff2') format('woff2'),
        url('./fonts/Epson/EPSON-KAISHO.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}


/*Alpine Magic*/
[x-cloak] { display: none !important; }

/*Themes*/

.light-mode {
    background-color: antiquewhite;
    color: black;
}

.light-mode > .mask-top {
    display: none;
}

.light-mode > .mask-bottom {
    display: none;
}

.light-mode > .frame {
    border-color: black;
}

.theme-button {
    position: fixed;
    bottom: 2rem;
    left: 49%;
}


/*Main*/
.about-text {
    font-family: monospace;
    font-size: large;
}

.project-slug {
    font-family: monospace;
    font-size: large;
}

.project-link {
    font-family: monospace;
    font-size: large;
}

.contact-text {
    font-family: monospace;
    font-size: large;
}

* {
    font-family: 'EPSON', Times, serif;
}

html {
    -ms-overflow-style: none;
    scrollbar-width: none;
}
html::-webkit-scrollbar {
    display: none;
}

body {
    padding: 0;
    margin: 0;
    background: rgb(0, 0, 0);
    background-attachment: fixed;
    color: white;
}


a {
    text-decoration: none;
    color: inherit;
    z-index: 10;
}

button {
    background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
    z-index: 1;
}

.shrink-spacing {
    letter-spacing: -0.5rem;
}

.site-header {
    font-size: 1.5rem;
    display: flex;
    height: 80%;
    padding: 1.25rem 0;
    position: fixed;
    right: 3rem;
    top: 3rem;
    writing-mode: vertical-rl;
}

.site-header > h1 {
    font-size: 2rem;
}

.site-header > * {
    padding-bottom: 0.5rem;
}

.site-nav-list {
    display: flex;
    justify-content: space-between;
    list-style-type: none;
}

.site-nav-link {
    margin-top: 5rem;
}

.author {
    position: fixed;
    direction: rtl;
    top: 3rem;
    right: 8rem;
}

.author > h1 {
    font-size: 2rem;
}

.frame {
    background-image: url(/noise.png), radial-gradient(ellipse at top right, rgb(112, 112, 112), transparent 60%), radial-gradient(ellipse at bottom right, rgb(139, 139, 130), transparent 60%);
    background-size: 180px, 100%, 200%;
    background-attachment: fixed;
    position: fixed;
    z-index: 10;
    left: 2rem;
    right: 2rem;
    top: 2rem;
    bottom: 2rem;
    border: 1px solid white;
    z-index: 0;
}


.mask-top {
    position: fixed;
    padding: 0;
    margin: 0;
    top:0;
    width:100%;
    height:2rem;
    z-index: 2;
    background-color: rgba(0,0,0,0.5)
}

.mask-bottom {
    position: fixed;
    padding: 0;
    margin: 0;
    bottom:0;
    width:100%;
    height:2rem;
    z-index: 2;
    background-color: rgba(0,0,0,0.5)
}

.page-about {
    position: fixed;
    bottom: 4rem;
    left: 4rem;
    width: 40%;
}

.page-project {
    width: 40%;
}

.project-list {
    display: flex;
    margin-left: 2rem;
    margin-top: 12rem;
    flex-direction: column;
    align-items: flex-start;
    row-gap: 1rem;
}

.project-list-item {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: baseline;
    column-gap: 0.5rem;
}

.project-top-line {
    white-space:nowrap;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: baseline;
    column-gap: 1rem;
}

.project-title {
    font-size: 2.2rem;
    font-weight: lighter;
    padding: 0;
    margin:0;
}

.project-time {
    font-size: 1.1rem;
}

.project-slug {
    padding:0;
}

.project-button {
    background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
    z-index: 1;
}

.page-contact {
    position: fixed;
    bottom: 4rem;
    left: 4rem;
}

.menu-button {
    position: fixed;
    right: 4.7rem;
    top: 13rem;
}


@media only screen and (max-width: 768px) {
    /* Mobile */

    html, body {

        width: 100%;
        height: 100%;
    }

    .page {
        left:0;
        top:0;
        width:100%;
        height:100%;
    }

    .site-header {
        right: 1rem;
        top: 1rem;
    }

    .theme-tag {
        display: none;
    }

    .theme-button {
        top: 93.5%;
        left: 25rem;
    }

    .menu-button {
        right: 2.7rem;
        top: 10.5rem;
    }

    .site-nav-link {
        margin-top: 2rem;
    }

    .author {
        position: fixed;
        font-weight: lighter;
        font-size: 1rem;
        top: 1.2rem;
        right: 6rem;
    }

    .frame {
        top: 1rem;
        bottom: 1rem;
        left: 1rem;
        right: 1rem;
    }

    .mask-top {
        height: 1rem;
        background-color: rgba(0,0,0,0.8)
    }

    .mask-bottom {
        height: 1rem;
        background-color: rgba(0,0,0,0.8)
    }

    .page-about {
        bottom: 2rem;
        left: 2rem;
        width: 60%;
    }

    .page-project {
        width: 80%;
    }

    .project-list {
        margin-top: 8rem;
        margin-left: 0;
        left: 1rem;
    }

    .project-top-line {
        max-width: 80vw;
        white-space:normal;
    }

    .project-title {
        font-size: 1.2rem;
        font-weight: bold;
    }
    
    .project-time {
        font-size: 1rem;
        display: none;
    }

    .page-contact {
        left: 2rem;
        bottom: 2rem;
    }
}

